[package]
name = "repete"
version = "0.1.0"
authors = ["Clinton Bowen <clinton@pantheon.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "*"
ctrlc = "*"
clap = "*"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3